--- a/mvc-dotnet/IoC/IoC.csproj
+++ b/mvc-dotnet/IoC/IoC.csproj
@@ -1,12 +1,9 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <RootNamespace>mvc_dotnet</RootNamespace>
-    <UserSecretsId>5bc82ef8-662e-431e-a455-b742aab39b58</UserSecretsId>
-    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
@@ -14,15 +11,11 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="9.0.0" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\IoC\IoC.csproj" />
     <ProjectReference Include="..\Models\Models.csproj" />
-    <ProjectReference Include="C:\Users\breno\source\repos\mvc-dotnet\mvc-dotnet\Servicos\Servicos.csproj" />
   </ItemGroup>
 
 </Project>
